# Scalable_Sys_Project_2

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  graph_rag.py  logic_dockerfile  pyproject.toml  requirements.txt
Docker/: docker-compose.yml
data/: 2025-11-22_11-44-35_rag_False_cache_False.json  2025-11-22_11-44-35_rag_False_cache_True.json  2025-11-22_11-44-35_rag_True_cache_False.json  2025-11-22_11-44-35_rag_True_cache_True.json  2025-11-22_17-08-53_rag_False_cache_False.json  2025-11-22_17-08-53_rag_False_cache_True.json  2025-11-22_17-08-53_rag_True_cache_False.json  2025-11-22_17-08-53_rag_True_cache_True.json  2025-11-23_17-20-35_rag_False_cache_False.json  2025-11-23_17-20-35_rag_False_cache_True.json  2025-11-23_17-20-35_rag_True_cache_False.json  2025-11-23_17-20-35_rag_True_cache_True.json  2025-11-24_03-10-21_plain.json  2025-11-24_03-10-21_rag.json  accuracy_plain.txt  accuracy_rag.txt  summary_2025-11-24_03-10-21.md  test_cache.json  test_cache_warm_start.json  test_input.json
results/: 2025-11-24_00-41-07_rag_False_with_cache_False.json  2025-11-24_00-44-13_rag_False_with_cache_True.json  2025-11-24_00-47-30_rag_True_with_cache_False.json  2025-11-24_00-55-55_rag_True_with_cache_True.json  2025-11-24_01-14-47_rag_False_with_cache_False.json  2025-11-24_01-18-04_rag_False_with_cache_True.json  2025-11-24_01-21-29_rag_True_with_cache_False.json  2025-11-24_01-29-38_rag_True_with_cache_True.json  2025-11-24_01-46-48_rag_True_with_cache_True.json  2025-11-24_02-02-16_rag_True_with_cache_True.json  2025-11-24_03-16-13_cache_test.json  (+4 more)
(+71 files in other folders)
