[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag"
version = "0.1.0"
description = "Nobel Laureat RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "kuzu",
    "polars",
    "pyarrow",
    "marimo>=0.18.0",
    "pandas>=2.3.3",
    "dspy>=3.0.4",
    "scikit-learn>=1.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

